# pistachio

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  justfile
.github/: dependabot.yml
.github/workflows/: bump_version.yml  ci.yml  docker-publish.yml  publish.yml
debian/: pistachio.service
src/: lib.rs  main.rs
