[package]
name = "pistachio"
version = "0.6.0"
edition = "2024"
description = "A Prometheus exporter designed for monitoring UPS devices using Network UPS Tools (NUT)."
license = "GPL-3.0-or-later"
repository = "https://github.com/barrelmaker97/pistachio"
keywords = ["ups", "nut", "prometheus", "exporter", "monitoring"]
authors = ["Nolan Cooper <nolancooper97@gmail.com>"]

[profile.release]
strip = "symbols"

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = { enable = false }
revision = ""

[dependencies]
clap = { version = "4.5.17", features = ["derive", "env"] }
env_logger = "0.11.5"
log = "0.4.22"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.17.2"
rups = { version = "0.6.1", features = ["async"] }
tokio = { version = "1.46.1", features = ["macros", "rt", "signal", "sync", "time"] }
