[package]
name = "pistachio"
version = "0.6.1"
edition = "2024"
description = "A Prometheus exporter designed for monitoring UPS devices using Network UPS Tools (NUT)."
license = "GPL-3.0-or-later"
repository = "https://github.com/barrelmaker97/pistachio"
keywords = ["ups", "nut", "prometheus", "exporter", "monitoring"]
authors = ["Nolan Cooper <nolancooper97@gmail.com>"]

[profile.release]
strip = "symbols"

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = { enable = false }
revision = ""

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unused_imports = "warn"
unused_qualifications = "warn"
unused_variables = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
dbg_macro = "deny"
clone_on_ref_ptr = "warn"
panic = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
unwrap_used = "warn"

[dependencies]
clap = { version = "4.5.17", features = ["derive", "env"] }
env_logger = "0.11.5"
log = "0.4.22"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.18.1"
rups = { version = "0.6.1", features = ["async"] }
tokio = { version = "1.46.1", features = ["macros", "rt", "signal", "sync", "time"] }
